Closed Bug 1784067 Opened 2 years ago Closed 2 years ago

Perma [tier 2] /builds/worker/checkouts/gecko/widget/gtk/nsWindow.cpp:1196:7: error: use of undeclared identifier 'moz_container_wayland_is_waiting_to_show'

Categories

(Core :: Widget: Gtk, defect, P5)

defect

Tracking

()

RESOLVED FIXED
105 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox-esr102 --- unaffected
firefox103 --- unaffected
firefox104 --- unaffected
firefox105 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: stransky)

References

(Regression)

Details

(Keywords: intermittent-failure, regression)

Attachments

(1 file)

Filed by: mlaza [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=386910946&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/PW0A99gqRR-zWxQX4h55Lw/runs/0/artifacts/public/logs/live_backing.log


[task 2022-08-10T12:32:45.496Z] 12:32:45     INFO -  TEST-PASS | check_textrel | TestDefineEnum
[task 2022-08-10T12:32:45.496Z] 12:32:45     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/mfbt/tests'
[task 2022-08-10T12:32:45.504Z] 12:32:45     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/widget/gtk'
[task 2022-08-10T12:32:45.517Z] 12:32:45     INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -std=gnu++17 -o nsWindow.o -c  -I/builds/worker/workspace/obj-build/dist/stl_wrappers -I/builds/worker/workspace/obj-build/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -fstack-clash-protection -DNDEBUG=1 -DTRIMMED=1 -DOS_POSIX=1 -DOS_LINUX=1 -DCAIRO_GFX '-DMOZ_APP_NAME="firefox"' -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/widget/gtk -I/builds/worker/workspace/obj-build/widget/gtk -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/checkouts/gecko/layout/base -I/builds/worker/checkouts/gecko/layout/forms -I/builds/worker/checkouts/gecko/layout/generic -I/builds/worker/checkouts/gecko/layout/xul -I/builds/worker/checkouts/gecko/other-licenses/atk-1.0 -I/builds/worker/checkouts/gecko/third_party/cups/include -I/builds/worker/checkouts/gecko/widget -I/builds/worker/checkouts/gecko/widget/headless -I/builds/worker/checkouts/gecko/widget/x11 -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wdeprecated-this-capture -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wc++2a-compat -Wenum-compare-conditional -Wno-ambiguous-reversed-operator -Wno-error=deprecated -Wno-error=deprecated-anon-enum-enum-conversion -Wno-error=deprecated-enum-enum-conversion -Wno-error=deprecated-enum-float-conversion -Wno-error=deprecated-pragma -Wno-error=deprecated-this-capture -Wno-error=deprecated-volatile -Wcomma -Wimplicit-fallthrough -Werror=non-literal-null-conversion -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=free-nonheap-object -Wno-error=return-std-move -Wno-error=atomic-alignment -Wno-error=deprecated-copy -Wformat -Wformat-security -Wno-gnu-zero-variadic-macro-arguments -Wno-psabi -Wthread-safety -Wno-unknown-warning-option -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fcrash-diagnostics-dir=/builds/worker/artifacts -fno-exceptions -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -gdwarf-4 -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O2 -fno-omit-frame-pointer -funwind-tables -Werror -pthread -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/unix-print -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/at-spi2-atk/2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/at-spi-2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/dbus-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu/dbus-1.0/include -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/cairo -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/pango-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/harfbuzz -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/pango-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/atk-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/cairo -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/pixman-1 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/freetype2 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/libpng12 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gdk-pixbuf-2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/libpng12 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gio-unix-2.0/ -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/glib-2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu/glib-2.0/include -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/dbus-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu/dbus-1.0/include -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/glib-2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu/glib-2.0/include -Werror=switch -fno-strict-aliasing -ffp-contract=off  -MD -MP -MF .deps/nsWindow.o.pp   /builds/worker/checkouts/gecko/widget/gtk/nsWindow.cpp
[task 2022-08-10T12:32:45.517Z] 12:32:45    ERROR -  /builds/worker/checkouts/gecko/widget/gtk/nsWindow.cpp:1196:7: error: use of undeclared identifier 'moz_container_wayland_is_waiting_to_show'
[task 2022-08-10T12:32:45.517Z] 12:32:45     INFO -    if (moz_container_wayland_is_waiting_to_show(mContainer)) {
[task 2022-08-10T12:32:45.518Z] 12:32:45     INFO -        ^
[task 2022-08-10T12:32:45.518Z] 12:32:45    ERROR -  /builds/worker/checkouts/gecko/widget/gtk/nsWindow.cpp:1199:5: error: use of undeclared identifier 'moz_container_wayland_clear_waiting_to_show_flag'
[task 2022-08-10T12:32:45.518Z] 12:32:45     INFO -      moz_container_wayland_clear_waiting_to_show_flag(mContainer);

I see the same on Solaris:

20:43.76 /builds/psumbera/mozilla-central-build/widget/gtk/nsWindow.cpp: In member function ‘void nsWindow::HideWaylandPopupWindow(bool, bool)’:
20:43.76 /builds/psumbera/mozilla-central-build/widget/gtk/nsWindow.cpp:1204:7: error: ‘moz_container_wayland_is_waiting_to_show’ was not declared in this scope
20:43.76  1204 |   if (moz_container_wayland_is_waiting_to_show(mContainer)) {
20:43.76       |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
20:44.52 /builds/psumbera/mozilla-central-build/widget/gtk/nsWindow.cpp:1207:5: error: ‘moz_container_wayland_clear_waiting_to_show_flag’ was not declared in this scope
20:44.52  1207 |     moz_container_wayland_clear_waiting_to_show_flag(mContainer);
20:44.52       |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

The first bad revision is:
Destryoing build FS
The first bad revision is:
changeset: 626642:750eeb107b8e
user: stransky <stransky@redhat.com>
date: Wed Aug 10 01:25:57 2022 -0700
description:
Bug 1782948 [Wayland] When we fail to show wayland popup, purge webrender queue and destroy compositor of the popup to make sure we're not blocking rendering of other windows r=emilio

Assignee: nobody → stransky
Status: NEW → ASSIGNED
Flags: needinfo?(stransky)

I can confirm that proposed patch resolves the issue with build on Solaris.

Flags: needinfo?(stransky)
Flags: needinfo?(stransky)
Pushed by stransky@redhat.com:
https://hg.mozilla.org/integration/autoland/rev/ef6554388dda
[Linux] Fix build without Wayland r=emilio
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 105 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: