Bug 1784067 [Linux] Fix build without Wayland r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D154632