widget/gtk/nsWindow.cpp
@@ -1200,7 +1200,7 @@ void nsWindow::HideWaylandPopupWindow(bool aTemporaryHide,
   if (mPopupClosed) {
     LOG("  Clearing mMoveToRectPopupSize\n");
     mMoveToRectPopupSize = {};
-
+#ifdef MOZ_WAYLAND
     if (moz_container_wayland_is_waiting_to_show(mContainer)) {
       // We need to clear rendering queue, see Bug 1782948.
       LOG("  popup failed to show by Wayland compositor, clear rendering "
@@ -1208,6 +1208,7 @@ void nsWindow::HideWaylandPopupWindow(bool aTemporaryHide,
       moz_container_wayland_clear_waiting_to_show_flag(mContainer);
       ClearRenderingQueue();
     }
+#endif
   }
 }
 
@@ -1261,6 +1262,7 @@ void nsWindow::WaylandPopupHideTooltips() {
 }
 
 void nsWindow::WaylandPopupCloseOrphanedPopups() {
+#ifdef MOZ_WAYLAND
   LOG("nsWindow::WaylandPopupCloseOrphanedPopups");
   MOZ_ASSERT(mWaylandToplevel == nullptr, "Should be called on toplevel only!");
 
@@ -1276,6 +1278,7 @@ void nsWindow::WaylandPopupCloseOrphanedPopups() {
     }
     popup = popup->mWaylandPopupNext;
   }
+#endif
 }
 
 // We can't show popups with remote content or overflow popups
